# NApyPI

./: .gitmodules  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: ci.yml  wheels.yml
include/: algo.hpp  matrix.hpp  stats.hpp
python/napypi/: __init__.py  numba_core.py  wrapper.py
src/: algo.cpp  anova.cpp  chi2.cpp  kruskal.cpp  matrix.cpp  mwu.cpp  napy.cpp  pearson.cpp  spearman.cpp  ttest.cpp
tests/: test_napy.py
