[build-system]
requires = [
  "scikit-build-core>=0.9,<0.11",
  "pybind11>=2.11",
  "packaging>=23.1",
  "setuptools>=68"
]
build-backend = "scikit_build_core.build"

[project]
name = "napypi"
version = "0.2.1"
description = "Fast numerical algorithms with C++ backend"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GNU GPL v3.0"}
authors = [{name = "Fabian Woller"}]
dependencies = ["numpy", "torch", "scipy", "pandas"]

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
wheel.packages = ["python/napypi"]
