[build-system]
requires = [
  "scikit-build-core>=0.9,<0.11",
  "pybind11>=2.11",
  "packaging>=23.1",
  "setuptools>=68"
]
build-backend = "scikit_build_core.build"

[project]
name = "napypi"
version = "0.4.8"
description = "Efficient statistics in Python for large-scale heterogeneous data with enhanced support for missing data"
readme = "README.md"
requires-python = ">=3.9, <3.13"
license = { text = "GPL-3.0-only" }
license-files = ["LICENSE"]
authors = [{name = "Fabian Woller"}]
dependencies = ["numpy", 
                "torch", 
                "pandas",
                "numba",
                "numba-scipy",
                "scipy==1.11.0"
                ]

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
wheel.packages = ["python/napypi"]
cmake.args = ["-DCMAKE_SIZEOF_VOID_P=8"]
