[build-system]
requires = [
  "scikit-build-core>=0.9,<0.11",
  "pybind11>=2.11",
  "packaging>=23.1",
  "setuptools>=68"
]
build-backend = "scikit_build_core.build"

[project]
name = "napypi"
version = "0.4.14"
description = "Efficient statistics in Python for large-scale heterogeneous data with enhanced support for missing data"
readme = "README.md"
requires-python = ">=3.9, <3.12"
license = { text = "GPL-3.0-only" }
license-files = ["LICENSE"]
authors = [{name = "Fabian Woller"}]
dependencies = [
                "torch", 
                "pandas",
                "numba",
                "numba-scipy",
                "numpy>=1.26,<2.0",
                "scipy>=1.11.1,<1.12"
                ]

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
wheel.packages = ["python/napypi"]
cmake.args = ["-DCMAKE_SIZEOF_VOID_P=8"]
